# Triangulator_EEEE3084

./: .gitignore  CMakeLists.txt  README.md
coursework_data/triangulation_files/: triangulation Notes.txt  triangulation#5.tri
inc/: Matrix.h  Triangle.h  Vec3.h  VecList.h
src/: Matrix.cpp  Triangle.cpp  Vec3.cpp  VecList.cpp  main.cpp
